design frontpage, prototype structure of files

--- a/ticketslammers.html
+++ b/ticketslammers.html
@@ -1,8 +1,26 @@
 <!doctype html>
+<html lang="en">
 
-<?php include_once?>
+<?php require_once 'includes/includes.php' ?>
 
+<section class="mainShop">
+    stuff
+    stuff
+    stuff
+    stuff
+    stuff
 
+</section>
+
+<section class="shoppingCart">
+    <h3>Shopping Cart</h3>
+    <div class="selectedItemWrap">
+        <img class="ticketImg" src="img\Voltaire.jpg" alt="Voltaire image">
+        <p class="ticketName">asaopaaa</p>
+        <p class="ticketPrice">$55</p>
+        <p class="ticketAmount">1</p>
+    </div>
+</section>
 <section>
     <h1>
         Todo:
@@ -15,6 +33,7 @@
 </section>
 
 
-  <script src="js/scripts.js"></script>
+<script src="js/scripts.js"></script>
 </body>
+
 </html>
